<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <io.rong.imkit.widget.AsyncImageView
                android:id="@+id/personal_portrait"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rc_default_portrait"
                android:padding="0dp" />

            <TextView
                android:id="@+id/personal_name"
                style="@style/DemoTextStyleBigBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/personal_portrait"
                android:singleLine="true" />

            <TextView
                android:id="@+id/personal_id"
                style="@style/DemoTextStyleMiddle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personal_name"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/personal_portrait" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_group_intro"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="32dp"
            android:visibility="gone">

            <TextView
                style="@style/DemoTextStyleBigBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/personal_area" />

            <TextView
                android:id="@+id/personal_area"
                style="@style/DemoTextStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="24dp"
            android:background="@color/group_list_liner"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rel_group_number"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="24dp"
            android:visibility="gone">

            <TextView
                style="@style/DemoTextStyleBigBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/personal_signature" />

            <TextView
                android:id="@+id/personal_signature"
                style="@style/DemoTextStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="24dp"
            android:background="@color/group_list_liner"
            android:visibility="gone" />


        <Button
            android:id="@+id/send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/de_group_join_in"
            android:text="@string/personal_send_message"
            android:textColor="@color/rc_text_color_secondary_inverse" />

        <Button
            android:id="@+id/send_voip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/de_group_delete"
            android:text="@string/personal_send_voip"
            android:textColor="@color/rc_text_color_secondary_inverse"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>
